--- a/priv/index.html
+++ b/priv/index.html
@@ -56,7 +56,7 @@
               var data = google.visualization.arrayToDataTable(arr);
 
               // Set chart options
-              var options = {'title':'How Much Pizza I Ate Last Night', 'width':600, 'height':300,
+              var options = {'title':'How Much Pizza I Ate Last Night',
                   isStacked : true,
                   interpolateNulls : true,
                   hAxis: {title : 'Time', titleTextStyle : {color : '#00000'}},
@@ -66,6 +66,22 @@
               // Instantiate and draw our chart, passing in some options.
               var chart = new google.visualization.AreaChart(document.getElementById('chart_div'));
               chart.draw(data, options);
+
+              google.visualization.events.addListener(chart, 'select', selectHandler);
+
+              function selectHandler() {
+                  var arr2 = [['Timestamp', 'Heap Size']];
+                  var selection = chart.getSelection();
+                  var proc = selection[0].column;
+
+                  for(i = 0; i < data.getNumberOfRows(); ++i) {
+                      arr2.push([data.getValue(i, 0), data.getValue(i, proc)]);
+                  }
+
+                  var d2 = google.visualization.arrayToDataTable(arr2);
+                  var c2 = new google.visualization.AreaChart(document.getElementById('chart_div_2'));
+                  c2.draw(d2, options);
+              }
           });
       }
     </script>
@@ -74,5 +90,6 @@
   <body>
     <!--Div that will hold the pie chart-->
     <div id="chart_div"></div>
+    <div id="chart_div_2"></div>
   </body>
 </html>
