--- a/priv/index.html
+++ b/priv/index.html
@@ -21,16 +21,19 @@
               var timeseries = {};
               var pids = [];
               var arr = [inner];
+              var first_time = jdata[0].timestamp;
+              var last_time = jdata[jdata.length - 1];
+
               $.each(jdata, function(i, current) {
                   if ($.inArray(current.pid, inner) < 0) {
                       inner.push(current.pid);
                       pids.push(current.pid);
                   }
-                  if (!(current.timestamp in timeseries)) {
-                      timeseries[current.timestamp] = [current]
+                  if (!((current.timestamp-first_time) in timeseries)) {
+                      timeseries[current.timestamp-first_time] = [current]
                   }
                   else {
-                      timeseries[current.timestamp].push(current);
+                      timeseries[current.timestamp-first_time].push(current);
                   }
               });
 
@@ -38,14 +41,17 @@
                   var local = [k];
                   $.each(pids, function(i, pid) {
                       var sz = null;
-                      var j = parseInt(k);
+                      var j = k;
                       while (sz == null) {
                           $.each(timeseries[j], function(i, current) {
                             if (current.pid == pid)
                               sz = current.heap_size + current.old_heap_size;
                           });
-                          j--;
-                          if (j < 0)
+
+                          var keys = Object.keys(timeseries).sort();
+                          var loc = keys.indexOf(j);
+                          j = keys[loc-1];
+                          if (loc < 0)
                               break;
                       }
                       local.push(sz);
@@ -56,10 +62,10 @@
               var data = google.visualization.arrayToDataTable(arr);
 
               // Set chart options
-              var options = {'title':'How Much Pizza I Ate Last Night',
+              var options = {'title':'Heap Usage Over Time',
                   isStacked : true,
                   interpolateNulls : true,
-                  hAxis: {title : 'Time', titleTextStyle : {color : '#00000'}},
+                  hAxis: { title : 'Timestamp', titleTextStyle : {color : '#00000'}},
                   vAxis: {minValue:0}
               };
 
