--- a/priv/index.html
+++ b/priv/index.html
@@ -1,5 +1,10 @@
 <html>
   <head>
+    <style>
+        body {
+            background:#E9E9E9;
+        }
+    </style>
     <!--Load the AJAX API-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
@@ -100,7 +105,7 @@
 
   <body>
     <!--Div that will hold the pie chart-->
-    <div id="chart_div"></div>
-    <div id="chart_div_2"></div>
+    <div id="chart_div" style="height:50%; width:100%"></div>
+    <div id="chart_div_2" style="height:50%; width:100%"></div>
   </body>
 </html>
