--- a/priv/index.html
+++ b/priv/index.html
@@ -73,6 +73,7 @@
 
               // Set chart options
               var options = {'title':'Heap Usage Over Time',
+                  backgroundColor:'#E9E9E9',
                   isStacked : true,
                   interpolateNulls : true,
                   hAxis: { title : 'Timestamp', titleTextStyle : {color : '#00000'}},
